# actuator-data-agent

./: .env.example  Dockerfile  README.md  pyproject.toml
data/processed/: electric_data_table.db
data/processed/chroma_db/: chroma.sqlite3
notebooks/: agent.ipynb  ingest.ipynb  ingest_summary.ipynb
scripts/: ingest.py  ingests.py  schemas.py
src/: main.py
src/agent/: agent.py  tools.py
src/api/: router.py  schemas.py
src/api/routers/: router.py
src/api/schemas/: schemas.py
