[project]
name = "intelligent-actuator-data-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.138.1",
    "google-genai>=2.10.0",
    "google-generativeai>=0.8.6",
    "langchain>=1.3.11",
    "langchain-chroma>=1.1.0",
    "langchain-core>=1.4.8",
    "langchain-google-genai>=4.2.6",
    "langchain-openai>=1.3.3",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.6",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pdfplumber>=0.11.10",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.49.0",
]
